--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -14,3 +14,4 @@ jobs:
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
           webRenderer: html
+          baseHref: /wordshk_server_demo/
